# bh1

./: configure.ac
data/: Makefile.am
data/countries/: Thumbs.db
data/extensions/: Thumbs.db
data/skin_default/: Thumbs.db
data/skin_default/buttons/: Thumbs.db
data/skin_default/icons/: Thumbs.db
data/skin_default/menu/: Thumbs.db
data/skin_default/spinner/: Thumbs.db
lib/python/: Makefile.am
